...
						{t('no_notifications_description')}
					</Text>
				</View>
			) : (
				<View style={{ flex: 1 }}>
					<FlashList
						testID='notifications-flatlist'
						data={notifications}
						showsVerticalScrollIndicator={false}
						keyExtractor={(item, index) => `notification-${item.id || index}`}
						renderItem={renderNotificationItem}
						onEndReached={handleLoadMore}
						onEndReachedThreshold={0.5}
...
