...
	const { password } = useLocalSearchParams()
	const router = useRouter()
	const { t: generalT } = useTranslation('general')
	const { t } = useTranslation('switch_device')
	return (
		<Layout.SafeAreaView
			testID='switch-device-confirm-container'
			style={{ paddingBottom: 32 }}
		>
			<View style={styles.container}>
				<Icon.Root>
					<Icon.Background
						name='background'
...
						{t('switch_device_description')}
					</Text>
				</View>
			</View>
			<View style={{ gap: 10 }}>
				<Button.Root
					testID='continue-button'
					onPress={() =>
						router.replace({
							pathname: '/(new-device)/enable-biometrics',
							params: { password },
						})
					}
...
