...
	useEffect(() => {
		checkCompatibility()
	}, [checkCompatibility])

	return (
		<Layout.SafeAreaView
			testID='enable-biometrics-screen'
			style={{ paddingBottom: 32 }}
		>
			<View style={styles.mainContainer}>
				<View>
					<Icon.Root>
						<Icon.Background
...
						)}
					</View>
				</View>

				<Button.Root
					size='lg'
					testID='continue-biometrics'
					onPress={handleContinue}
				>
					<Button.Text>{t('continue')}</Button.Text>
				</Button.Root>
				<ErrorModal
					showModal={showModal}
...
